<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimaryDark"
             android:orientation="vertical">

    <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/colorPrimaryDark"
                  android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbarColor"
            android:theme="@style/Toolbar"
            android:title="Kanji Beginer"/>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        </FrameLayout>


    </LinearLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="end|bottom"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_addButtonColorPressed="@color/colorAccent"
        app:fab_addButtonPlusIconColor="@android:color/white"
        app:fab_addButtonStrokeVisible="false"
        app:fab_expandDirection="up"
        app:fab_labelStyle="@style/menu_labels_style"
        app:layout_anchor="@id/container"
        app:layout_anchorGravity="bottom|right|end"
        app:menu_icon="@drawable/play">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/progressive_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_icon="@drawable/ic_progress"
            app:fab_title="@string/practice_progressive"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/normal_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_icon="@drawable/ic_straight"
            app:fab_title="@string/practice_normal"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/shuffle_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@android:color/white"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_icon="@drawable/ic_shuffle_white_24dp"
            app:fab_title="@string/practice_random"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</FrameLayout>