<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="12dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="8dp"
                android:src="@drawable/ic_share" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="8dp"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/discord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="8dp"
                android:src="@drawable/ic_discord" />

            <ImageView
                android:id="@+id/play_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="8dp"
                android:src="@drawable/ic_google_play" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_infos"
            android:drawablePadding="8dp"
            android:text="@string/news"
            android:textColor="@color/colorAccent" />

        <com.ms.square.android.expandabletextview.ExpandableTextView xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
            android:id="@+id/expand_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            expandableTextView:animDuration="200"
            expandableTextView:maxCollapsedLines="4">

            <TextView
                android:id="@+id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/rounded_bg"
                android:padding="12dp"
                android:textColor="@color/lighter_gray"
                tools:text="Bonjour tout le monde\nfdfdfdf\nfdfsdf\nfdsfsffnfdss\ngfdgfkgjldkfg" />

            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@android:color/transparent"
                android:padding="16dp" />

        </com.ms.square.android.expandabletextview.ExpandableTextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_yomi"
            android:drawablePadding="8dp"
            android:text="@string/last_categories"
            android:textColor="@color/colorAccent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/last_category_1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/rounded_bg"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_jlpt3_big"
                    android:textColor="@color/lighter_gray" />

                <ImageView
                    android:id="@+id/last_category_2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/rounded_bg"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="12dp"
                    android:src="@drawable/ic_jlpt2_big"
                    android:textColor="@color/lighter_gray" />

            </LinearLayout>

            <TextView
                android:id="@+id/no_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_bg"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/no_categories_yet"
                android:textColor="@color/lighter_gray" />


        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_today"
            android:drawablePadding="8dp"
            android:text="@string/today"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_bg"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/today_quiz_launch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_quiz"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/quiz_launched" />

            <TextView
                android:id="@+id/today_words_seen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_visibility_white_18dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/words_seen" />

            <TextView
                android:id="@+id/today_good_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_check_white_24dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/good_answers" />

            <TextView
                android:id="@+id/today_wrong_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_clear_white_18dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/wrong_answers" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_week"
            android:drawablePadding="8dp"
            android:text="@string/this_week"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_bg"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/week_quiz_launch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_quiz"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/quiz_launched" />

            <TextView
                android:id="@+id/week_words_seen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_visibility_white_18dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/words_seen" />

            <TextView
                android:id="@+id/week_good_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_check_white_24dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/good_answers" />

            <TextView
                android:id="@+id/week_wrong_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_clear_white_18dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/wrong_answers" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_month"
            android:drawablePadding="8dp"
            android:text="@string/this_month"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_bg"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/month_quiz_launch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_quiz"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/quiz_launched" />

            <TextView
                android:id="@+id/month_words_seen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_visibility_white_18dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/words_seen" />

            <TextView
                android:id="@+id/month_good_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_check_white_24dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/good_answers" />

            <TextView
                android:id="@+id/month_wrong_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_clear_white_18dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/wrong_answers" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawablePadding="8dp"
            android:text="@string/total"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_bg"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/total_quiz_launch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_quiz"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/quiz_launched" />

            <TextView
                android:id="@+id/total_words_seen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_visibility_white_18dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/words_seen" />

            <TextView
                android:id="@+id/total_good_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_check_white_24dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/good_answers" />

            <TextView
                android:id="@+id/total_wrong_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_clear_white_18dp"
                android:drawablePadding="8dp"
                android:textColor="@color/lighter_gray"
                tools:text="@string/wrong_answers" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>